--- a/Inheritance2/Inheritance2.csproj
+++ b/Inheritance2/Inheritance2.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AraSicaklar.cs" />
     <Compile Include="EtYemekleri.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
