Son duzenlemeler yapildi.

--- a/Abstract/Abstract.csproj
+++ b/Abstract/Abstract.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bateri.cs" />
+    <Compile Include="CalmaTuru.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
