--- a/PizzaOtomasyonu/PizzaOtomasyonu.csproj
+++ b/PizzaOtomasyonu/PizzaOtomasyonu.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Pizza.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Siparis.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
